minor fixes to LandingPage, add login loading indicator, fix event name & Picture overlap

--- a/src/css/Signup-Login.css
+++ b/src/css/Signup-Login.css
@@ -140,3 +140,6 @@
   margin-bottom: 0px;
   font-size: small;
 }
+.Loading{
+  margin-top: 150px;
+}
